# nucleo-h503rb-minimal-rs

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: main.rs
